# AutomatedCandidateEvaluationSystem

./: agent_test.py  app.py  main.py  pyproject.toml  requirements.txt
static/: script.js  style.css
templates/: index.html
